feat: Implement auth layer
