# spring/src/main/java/com/github/lambda/playground/swagger/api/AuthControllerApi.java
@@ -29,7 +29,7 @@ import javax.validation.constraints.*;
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-09-29T18:44:26.733+09:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-10-03T19:16:43.113+09:00")
 
 @Api(value = "AuthController", description = "the AuthController API")
 public interface AuthControllerApi {
@@ -115,15 +115,15 @@ public interface AuthControllerApi {
     }
 
 
-    @ApiOperation(value = "", nickname = "whoami", notes = "", response = UserDTO.class, tags={ "auth-controller", })
+    @ApiOperation(value = "", nickname = "whoiam", notes = "", response = UserDTO.class, tags={ "auth-controller", })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "OK", response = UserDTO.class),
         @ApiResponse(code = 200, message = "error", response = Failure.class) })
-    @RequestMapping(value = "/auth/whoami",
+    @RequestMapping(value = "/auth/whoiam",
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.GET)
-    default ResponseEntity<UserDTO> whoami() {
+    default ResponseEntity<UserDTO> whoiam() {
         if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
             if (getAcceptHeader().get().contains("application/json")) {
                 try {
